# compiler-design

./: .gitignore
lab0/: lab0.cabal  main.py  otchet.md
lab0/src/: AST.hs  Lexer.hs  Main.hs  Parser.hs
lab0/test/: Spec.hs
lab1_1/: btpc2.pas  hello.pas
lab1_1/lab1.1/btpc64-linux/: btpc64-2.pas  btpc64-3.pas  my_btpc  test.pas
lab1_2/: main.py  test_input.txt
lab1_3/: main.py  test_input.txt
lab1_4/: input.txt  lab.md  main.py
lab1_5/: input.txt  main.c  scanner.l
lab2_1/: Readme.md  demo.go  demo_transformed.go  go.mod  transform.go
lab2_2/: README.md  grammar.md  main.py  parser.py  syntax.md  test_mini.txt  test_spec.txt
lab2_2/parser_edsl_v2/: parser_edsl.py
lab2_3/: Readme.md  input_grammar.txt  lab.md  lab2.md  main.py  output_tree.dot  tree.dot
lab2_4/: README.md  comment_test.oberon  recursion-descent.cabal  simple.oberon
lab2_4/src/: AST.hs  Lexer.hs  Main.hs  Parser.hs  Parser.hs.new
lab3_1/: Readme.md  bootstrapper.py  calc_expr_parsetree.dot  calc_gdl_ast.dot  calc_table.py  calc_table_bootstrapped.py  calculator.py  calculator_evaluator.py  calculator_grammar.gdl  calculator_lexer.py  common.py  compiler_generator.py  expression.txt  gdl_bootstrap_ast.dot  gdl_grammar_for_bootstrap.gdl  gdl_lexer.py  gdl_parser_hardcoded.py  gdl_table.py  generic_ll1_parser.py  grammar_analyzer.py  ll1_conflict_test.gdl  missing_axiom_test.gdl  missing_rules_test.gdl  multiple_axioms_test.gdl  test_output.py  undefined_nonterminal_test.gdl
lab3_2/: Makefile  README.md  l2.l  l2.y  lab.md  main.c  simple_test.l2  test.l2
lab3_3/: error.oberon  example_spec.txt  lab.md  main.py  parser.py  semantic_analyzer.py  semantic_errors.oberon  test_semantic_analyzer.py
lab3_3/src/: Lexer.hs  Main.hs  Semantic.hs
lab3_3_haskell_dont_work_sad/: complex.oberon  recursion-descent.cabal  test-commands.txt  test.oberon
lab3_3_haskell_dont_work_sad/src/: Main.hs  Parser.hs  Semantic.hs
lab3_3a/: Readme.md  main.py  semantic_analyzer.py
