name:                lab0
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , AST
                     , Parser
  build-depends:       base >=4.7 && <5
                     , containers >=0.6 && <0.8

  default-language:    Haskell2010

test-suite lab4-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >=2.7.0
                     , lab0
                     , containers >=0.6 && <0.8

  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010

executable Main
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , lab0
                     , containers >=0.6 && <0.8
                     , parsec >=3.1 && <4
                     , mtl >=2.2.2 && <2.3
  default-language:    Haskell2010
